# midigen

./: CMakeLists.txt  README.md
midigen/: main.cpp  midigen.cpp  midigen.hpp
